--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: java
 deploy:
   provider: heroku
   api_key: $HEROKU_API_KEY
-  app: my-pricing-server
+  app: tarification-eisti
 before_install:
   - chmod +x mvnw
